Calculate body fat%.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="in.zattack.personaldietician.MainActivity" />
         </activity>
+        <activity
+            android:name=".FatBurner"
+            android:label="@string/title_activity_fat_burner"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="in.zattack.personaldietician.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
